# orthoplay

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Expand Instructions with Detailed Steps and Visuals  README.md  SECURITY.md  about-orthoplay.md  netlify.toml  package-lock.json  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: contributors.json  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  auth_models.py  auth_utils.py  leaderboard_service.py  main.py  models.py  routes.py  services.py
backend/data/: leaderboard.json  leaderboard_backup.json  words.json  words_with_hint.json
frontend/: index.html  package-lock.json  package.json
frontend/public/sounds/: README.txt
frontend/src/: App.css  App.jsx  AuthContext.jsx  index.css  main.jsx
frontend/src/assets/: ThemeToggle.css
frontend/src/components/: AudioPlayer.jsx  AuthContext.jsx  Chatbot.jsx  DifficultyPopup.jsx  ErrorMessage.jsx  Footer.jsx  GameLegend.jsx  GameScore.jsx  GlobalStyles.jsx  Hints.jsx  Leaderboard.jsx  LengthGuesser.jsx  LetterInput.jsx  Login.jsx  MedalPopup.jsx  Navigation.jsx  PlanGenerator.jsx  ProgressChart.jsx  ScoreSubmission.jsx  Signup.jsx  SpellingGame.jsx  SpellingHistory.jsx  ThemeToggle.jsx  VoiceGuideToggle.jsx  WordDescription.jsx
frontend/src/context/: ThemeContext.jsx
frontend/src/data/: exercise_library.json
frontend/src/pages/: AboutPage.jsx  CompletePage.jsx  ContributorsPage.jsx  GamePage.jsx  HowToPlay.jsx  LeaderboardPage.jsx  StartPage.jsx  TimedIntro.jsx  TimedPlay.jsx  TimedSummary.jsx
(+4 files in other folders)
